--- a/stylesheet.css
+++ b/stylesheet.css
@@ -40,14 +40,18 @@ body {
   max-width: 800px;
   text-align: center;
   margin: auto;
+  padding: 10px;
+  padding-bottom: 20px;
+  background-color: #F5E0F5;
 }
 
 .resume{
+  margin: -10px;
   padding: 10px;
   background-color: #F5EFE0;
 }
 
-.resume h1{
+h1{
   color: #DE7A02;
 }
 
@@ -75,5 +79,27 @@ body {
   padding: 8px;
 }
 
-.row:before, .row:after {content: ""; display: table;}
-.row:after{ clear: both; }
+.project-text{
+  float: right;
+  width: 70%;
+}
+
+.project-pic{
+  float: right;
+  width: 30%;
+  text-align: center;
+ }
+ 
+ .project-image{
+  max-height: 200px;
+  max-width: 200px;
+  margin: 20px;
+ }
+
+.row:before, .row:after {
+  content: ""; display: table;
+}
+
+.row:after{ 
+  clear: both; 
+}
