--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,6 +3,10 @@ body {
   background-color: #BCA4DA;
   max-width: 1000px;
   margin: auto;
+  line-height: 130%;
+  text-ren­der­ing: op­ti­mizeLeg­i­bil­ity;
+  font-fea­ture-set­tings: <kern>;
+  font-family: optima;
 }
 
 #index-pic{
@@ -33,13 +37,13 @@ body {
   padding: 20px;
   text-align: center;
 }
- 
+
  .active {
   background-color: black;
   border-bottom-right-radius: 0px;
   border-top-right-radius: 0px;
  }
- 
+
  .page-body{
   max-width: 800px;
   text-align: center;
@@ -57,6 +61,7 @@ body {
 
 h1{
   color: #DE7A02;
+  font-family: hoefler-text;
 }
 
 .resume-header p{
@@ -108,7 +113,7 @@ h1{
   width: 30%;
   padding-top: 5%;
  }
- 
+
  .project-pic img{
   max-height: 200px;
   max-width: 200px;
@@ -118,6 +123,6 @@ h1{
   content: ""; display: table;
 }
 
-.row:after{ 
-  clear: both; 
+.row:after{
+  clear: both;
 }
