--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,8 +2,9 @@ body {
   padding: 8px;
   max-width: 1000px;
   margin: auto;
-  line-height: 135%;
+  line-height: 140%;
   font-family: 'Source Sans Pro', sans-serif;
+  font-size: 100%;
 }
 
 #index-pic{
@@ -54,6 +55,10 @@ h1, h2, h3, h4, h5, h6{
 
 h1{
   color: #DE7A02;
+}
+
+p{
+  font-size: 1.125em;
 }
 
 .resume-header p{
