--- a/stylesheet.css
+++ b/stylesheet.css
@@ -123,3 +123,48 @@ p{
 .row:after{
   clear: both;
 }
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+li {
+  display: inline;
+}
+
+li a, .dropbtn {
+    display: inline-block;
+    padding: 14px 16px;
+    text-decoration: none;
+    color: black;
+}
+
+li a:hover, .dropdown:hover .dropbtn {
+    background-color: #f1f1f1;
+}
+
+li.dropdown {
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    text-decoration: none;
+    display: block;
+    width: 100%;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
