create jekyll site

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -144,6 +144,7 @@ li a, .dropbtn {
     padding: 14px 16px;
     text-decoration: none;
     color: black;
+    width: 210px;
 }
 
 li a:hover, .dropdown:hover .dropbtn {
@@ -158,6 +159,7 @@ li.dropdown {
     display: none;
     position: absolute;
     z-index: 1;
+    width:210px;
 }
 
 .dropdown-content a {
