tweak formatting and add GA

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
 
   {% include head.html %}
-  
+
   <!-- font-smoothing is only applied on dark themes -->
   <body class="font-smoothing">
 
@@ -13,6 +13,10 @@
     </div>
 
     {% include footer.html %}
+
+    {% if jekyll.environment == 'production' %}
+      {% include analytics.html %}
+    {% endif %}
 
   </body>
 
