--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,6 @@
     <ul class="mt-1 mt-lg-2 mr-2 mr-lg-3">
       <li class="inline-block block-lg text-right ml-1 ml-lg-0">
         <a class="italic h4 bold no-underline" href="{{ site.baseurl }}/">
-          <!-- {{ site.title }} -->
           Home
         </a>
       </li>
@@ -24,6 +23,11 @@
         </li>
         {% endif %}
       {% endfor %}
+      <li class="inline-block block-lg text-right ml-1 ml-lg-0">
+        <a class="italic h4 no-underline font-smoothing" href="{{ site.baseurl }}/resume.pdf">
+          Resume
+        </a>
+      </li>
     </ul>
   </div>
 </header>
