--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,6 +11,11 @@
 
         <div class="right absolute-lg right-0 top-0">
           <ul class="mt-2 mr-2 mr-lg-3">
+              <li class="inline-block block-lg text-right ml-1 ml-lg-0">
+                <a class="italic h4 bold no-underline" href="{{ site.baseurl }}/">
+                  Home
+                </a>
+              </li>
             {% for my_page in site.pages %}
               {% if my_page.title and my_page.show_page %}
               <li class="inline-block block-lg text-right ml-1 ml-lg-0">
@@ -18,13 +23,18 @@
               </li>
               {% endif %}
             {% endfor %}
+            <li class="inline-block block-lg text-right ml-1 ml-lg-0">
+              <a class="italic h4 no-underline font-smoothing" href="{{ site.baseurl }}/resume.pdf">
+                Resume
+              </a>
+            </li>
           </ul>
         </div>
 
         <div class="container mx-auto px-2 mt-4 mb-2 clearfix header-text">
           <h1 class="h0 inline-block py-2 mt-4 header-title">{{ site.title }}</h1>
 
-          <div class="clearfix mb-4 py-1">
+          <div class="clearfix mb-1 py-1">
             <p class="h4 lh-condensed font-smoothing">{{ site.description }}</p>
             <div class="col-1 sm-width-full border-top-thick">
             </div>
