--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -53,6 +53,11 @@
 
     {% include footer.html %}
 
+    {% if jekyll.environment == 'production' %}
+      {% include analytics.html %}
+    {% endif %}
+
+
   </body>
 
 </html>
